--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,17 @@ Package: rpuck
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Kirk",
+           family = "Zhong",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "chuusankirk@hotmail.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: What license it uses
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.0.2
+Suggests: 
+    testthat (>= 2.1.0)
+Imports: 
+    rpuck
