--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,12 +12,13 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
-Suggests: 
-    testthat (>= 2.1.0)
 Imports:
     dplyr,
     httr,
     ggplot2,
     jsonlite,
     grid,
-    gridExtra
+    gridExtra,
+    glue,
+    tidyr,
+    testthat
