--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     gridExtra,
     glue,
     tidyr,
-    testthat
+    testthat,
+    scales
 Suggests: 
     covr
 URL: https://github.com/UBC-MDS/rpuck
