--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
-pandoc: 2.3.1
+pandoc: 2.7.3
 pkgdown: 1.4.1
 pkgdown_sha: ~
 articles:
-  my-vignette: my-vignette.html
+  rpuck-vignette: rpuck-vignette.html
+  rpuck: rpuck.html
 
